Fix rename from menu-modal-level to sidebar-level of z-index.scss

--- a/styles/constants/_z-index.scss
+++ b/styles/constants/_z-index.scss
@@ -3,5 +3,5 @@ $lnb-level: 200;
 $product-tab-level: 100;
 
 $search-modal-level: 500;
-$menu-modal-level: 500;
+$sidebar-level: 500;
 $overlay-level: 400;
